Fix Filter alignment

--- a/styles/FilterRegion.module.css
+++ b/styles/FilterRegion.module.css
@@ -13,10 +13,11 @@
 
  @media screen and (max-width: 850px){
   .dropdown{
+    margin-left: 1rem ;
     background-color: transparent;
     border: none;
     color: #E8A941;
-    width:80%;
+    width:60%;
     font-size: 1.5rem;
     cursor: pointer;
   }
