--- a/styles/categoryFilter.module.css
+++ b/styles/categoryFilter.module.css
@@ -17,8 +17,8 @@
      background-color: transparent;
      border: none;
      color: #E8A941;
-     width:80%;
-     
+     width:60%;
+     margin-left:1rem;
      cursor: pointer;
    }
    }
